# DjangoProject

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  get_categories.py  get_intervalshedule.py  get_products.py  pyproject.toml
app_cart/: admin.py  forms.py  models.py  views.py
app_cart/migrations/: 0001_initial.py
app_cart/services/: mixins_for_cart.py
app_carts/: admin.py  apps.py  cart.py  forms.py  models.py  urls.py  views.py
app_carts/migrations/: 0001_initial.py  0002_initial.py
app_carts/tests/: conftest.py  test_forms.py  test_models.py
app_orders/: admin.py  apps.py  delivery.py  forms.py  models.py  order.py  payment.py  tasks.py  urls.py  views.py
app_orders/migrations/: 0001_initial.py  0002_initial.py
app_orders/tests/: conftest.py  test_forms.py  test_models.py
app_shop/: admin.py  apps.py  category.py  forms.py  models.py  urls.py  views.py
app_shop/migrations/: 0001_initial.py  0002_initial.py
app_shop/tests/: conftest.py  test_forms.py  test_models.py  test_templates.py  test_views.py
app_users/: admin.py  forms.py  models.py  tasks.py  user.py  views.py
app_users/migrations/: 0001_initial.py
app_users/tests/: conftest.py  test_forms.py  test_models.py
config/: logger.py  settings.py  urls.py
old/app_shop/: apps.py  forms.py  models.py  urls.py  views.py
shop_app/: admin.py  forms.py  models.py  urls.py  views.py
shop_app/migrations/: 0001_initial.py
templates/: base.html  base1.html  base2.html  menu.html
templates/app_cart/: cart_detail.html
templates/app_shop/: about.html  (+4 more)
(+31 files in other folders)
